--- a/views/index.pug
+++ b/views/index.pug
@@ -1,58 +1,66 @@
 doctype html
 html
   head
+    style
+      include ./gameboy.css 
   title Tommy the Alien
   body
-    h1 
-      img(src= "https://i.imgur.com/TchHfSw.jpg")
-    h2= message
-      img(src=img)
-    h3= text
-    h4= subtext
-    if fiveoptions === true
-      form(action= link, method= "POST")
-        input(type= "submit", name= "playerChoice" value= option1)
-        br    
-        input(type= "submit", name= "playerChoice" value= option2)
-        br
-        input(type= "submit", name= "playerChoice" value= option3)
-        br
-        input(type= "submit", name= "playerChoice" value= option4)
-        br
-        input(type= "submit", name= "playerChoice" value= option5)
-    if fouroptions === true
-      form(action= link, method= "POST")
-        input(type= "submit", name= "playerChoice" value= option1)
-        br    
-        input(type= "submit", name= "playerChoice" value= option2)
-        br
-        input(type= "submit", name= "playerChoice" value= option3)
-        br
-        input(type= "submit", name= "playerChoice" value= option4)
-    if threeoptions === true
-      form(action= link, method= "POST")
-        input(type= "submit", name= "playerChoice" value= option1)
-        br    
-        input(type= "submit", name= "playerChoice" value= option2)
-        br
-        input(type= "submit", name= "playerChoice" value= option3)
-    if twooptions === true
-      form(action= link, method= "POST")
-        input(type= "submit", name= "playerChoice" value= option1)
-        br    
-        input(type= "submit", name= "playerChoice" value= option2)
-    if oneoptions === true
-      form(action= link, method= "POST")
-        input(type= "submit", name= "playerChoice" value= option1)
-    if showForm === true
-      form(action= link, method= "POST")
-        input(type= "text", name= "userName")
-        input(type= "submit", value = "start")
-    else  
-      p=p
-    if errorMessage === 'true'
-      p= errorMessageText
-    else
-      p=p2
-    
+    div(class= "gameboyBody")
+      div(class= "gameboyScreen1")
+        div(class= "gameboyScreen2")
+          img(class= "gameboyLogo" src= "https://imgur.com/GRVA2vl.png")
+          br
+          img(class= "nintendoLogo" src= "https://imgur.com/mwqNrfq.png")
+          br
+          img(class= "powerIndicator" src= "https://imgur.com/TiYs9Y2.png")
+          h1 
+            img(src="https://imgur.com/JlMqXiV.png" class= "bannerImage")
+          h2(class="message")= message
+          h3(class="text")= text
+          h4(class="subText")= achievementtexts
+          h5(class="subText")= backpacktexts
+          if fiveoptions === true
+            form(action= link, method= "POST" class= 'buttonLayout')
+              input(type= "submit", name= "playerChoice" value= option1 class= 'buttonStyle')
+              br    
+              input(type= "submit", name= "playerChoice" value= option2 class= 'buttonStyle')
+              br
+              input(type= "submit", name= "playerChoice" value= option3 class= 'buttonStyle')
+              br
+              input(type= "submit", name= "playerChoice" value= option4 class= 'buttonStyle')
+              br
+              input(type= "submit", name= "playerChoice" value= option5 class= 'buttonStyle')
+          if fouroptions === true
+            form(action= link, method= "POST" class= 'buttonLayout')
+              input(type= "submit", name= "playerChoice" value= option1 class= 'buttonStyle')
+              br    
+              input(type= "submit", name= "playerChoice" value= option2 class= 'buttonStyle')
+              br
+              input(type= "submit", name= "playerChoice" value= option3 class= 'buttonStyle')
+              br
+              input(type= "submit", name= "playerChoice" value= option4 class= 'buttonStyle')
+          if threeoptions === true
+            form(action= link, method= "POST" class= 'buttonLayout')
+              input(type= "submit", name= "playerChoice" value= option1 class= 'buttonStyle')
+              br    
+              input(type= "submit", name= "playerChoice" value= option2 class= 'buttonStyle')
+              br
+              input(type= "submit", name= "playerChoice" value= option3 class= 'buttonStyle')
+          if twooptions === true
+            form(action= link, method= "POST" class= 'buttonLayout')
+              input(type= "submit", name= "playerChoice" value= option1 class= 'buttonStyle')
+              br    
+              input(type= "submit", name= "playerChoice" value= option2 class= 'buttonStyle')
+          if oneoptions === true
+            form(action= link, method= "POST" class= 'buttonLayout')
+              input(type= "submit", name= "playerChoice" value= option1 class= 'buttonStyle')
+          if showForm === true
+            form(action= link method= "POST")
+              input(type= "text" name= "userName" class= 'loginForm' autocomplete= 'off')
+              input(type= "submit" value = "start" class= 'startButton')
+          if errorMessage === 'true'
+            p(class= 'errorText')= errorMessageText
+
+        
+        
 
