--- a/views/index.pug
+++ b/views/index.pug
@@ -14,7 +14,7 @@ html
           br
           img(class= "powerIndicator" src= "https://imgur.com/TiYs9Y2.png")
           h1 
-            img(src="https://imgur.com/JlMqXiV.png" class= "bannerImage")
+            img(src="https://imgur.com/2Uz0h7U.png" class= "bannerImage")
           h2(class="message")= message
           h3(class="text")= text
           h4(class="subText")= achievementtexts
