--- a/views/gameboy.css
+++ b/views/gameboy.css
@@ -80,6 +80,7 @@ body {
             margin-left: 10px;
             text-align: center;
             opacity: .8;
+            cursor: default;
         }
         .loginForm {
             font-family: 'Press Start 2P', cursive;
@@ -103,6 +104,7 @@ body {
             border: 4px solid black;
             border-radius: 2px;
             opacity: .8;
+            cursor: pointer;
         }
         .errorText {
             font-family: 'Press Start 2P', cursive;
@@ -110,6 +112,7 @@ body {
             color: rgb(191, 0, 0);
             margin-top: 75px;
             text-align: center;
+            cursor: default;
             opacity: .8;
             animation: blinker 1s infinite;
         }
@@ -124,6 +127,7 @@ body {
             text-align: left;
             margin-left: 12px;
             margin-right: 10px;
+            cursor: default;
         }
         .subText {
             font-family: 'Press Start 2P', cursive;
@@ -131,6 +135,7 @@ body {
             text-align: left;
             margin-left: 12px;
             opacity: .9;
+            cursor: default;
 
         }
         .buttonLayout {
@@ -148,4 +153,5 @@ body {
                 border-radius: 2px;
                 width: 150px;
                 height: 25px;
+                cursor: pointer;
             }
