minor css update for margins

--- a/views/gameboy.css
+++ b/views/gameboy.css
@@ -134,6 +134,7 @@ body {
             font-size: 8px;
             text-align: left;
             margin-left: 12px;
+            margin-right: 12px;
             opacity: .9;
             cursor: default;
 
