--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,7 @@ html
     style
       include ./gameboy.css 
   title Tommy the Alien
+  link(rel='icon', sizes='16x16 32x32 48x48 64x64', href="https://imgur.com/FsdZuc8.png")
   body
   div(class= "gameboyBody")
     div(class= "gameboyScreen1")
