--- a/views/gameboy.css
+++ b/views/gameboy.css
@@ -107,8 +107,9 @@ body {
     margin-top: 40px;
     margin-left: 10px;
     text-align: center;
-    opacity: .8;
+    opacity: .9;
     cursor: default;
+    /* text-shadow: #f0b000 1px 0 10px; */
 }
 .loginForm {
     font-family: 'Press Start 2P', cursive;
@@ -121,6 +122,8 @@ body {
     border: 4px solid black;
     border-radius: 2px;
     opacity: .8;
+    box-shadow: inset -2px -2px rgb(51, 51, 51);
+    outline: none;
 }
 .startButton {
     font-family: 'Press Start 2P', cursive;
@@ -133,7 +136,18 @@ body {
     border-radius: 2px;
     opacity: .8;
     cursor: pointer;
-}
+    box-shadow: inset -2px -2px rgb(51, 51, 51);
+    outline: none;
+}   
+    .startButton:hover {
+    background-color: lightslategrey;
+    }
+    .startButton:focus {
+    background-color: rgb(97, 105, 114);
+    box-shadow: inset 2px 2px rgb(51, 51, 51);
+    outline: none;
+
+    }
 .errorText {
     font-family: 'Press Start 2P', cursive;
     font-size: 14px;
@@ -183,4 +197,15 @@ body {
         width: 150px;
         height: 25px;
         cursor: pointer;
+        background-color: white;
+        box-shadow: inset -2px -2px rgb(51, 51, 51);
     }
+        .buttonStyle:hover {
+            background-color: lightslategrey;
+        }
+        .buttonStyle:focus {
+            background-color: rgb(97, 105, 114);
+            box-shadow: inset 2px 2px rgb(51, 51, 51);
+            outline: none;
+
+        }
