--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,9 @@ html
         br
         img(class= "nintendoLogo" src= "https://imgur.com/mwqNrfq.png")
         br
-        img(class= "powerIndicator" src= "https://imgur.com/TiYs9Y2.png")
+        div
+          img(class= "powerLight" src = "https://imgur.com/ICK2RI6.png" id= "powerLight")
+        img(class= "powerIndicator" src= "https://imgur.com/oe0yRR0.png")
         if bootAnimation === true && !errorMessage  
           img(src= "https://imgur.com/eXThgFx.gif" class= "bootAnimation" id= "bootAnimationId")
           br
