--- a/views/gameboy.css
+++ b/views/gameboy.css
@@ -3,6 +3,7 @@
 body {
     background-color: #d1d1d1;
 }
+
 /*static*/
 .bootAnimation {
     z-index: 1000;
@@ -30,6 +31,20 @@ body {
     transform: translate(-50%, -50%);
     margin: auto;
 }
+.fadeOut {
+    top: 67px;
+    position: absolute;
+    z-index: 2;
+    background-color: #8eb8bd;
+    height: 233px;
+    width: 380px;
+    animation: fadeIn 3s;
+}
+    @keyframes fadeIn {
+        20% {opacity: 0;}
+        100% {opacity: 1;}
+    }
+
 .screenActual {
     opacity: 1;
     animation: fadeIn .2s;
@@ -223,5 +238,53 @@ body {
             background-color: rgb(97, 105, 114);
             box-shadow: inset 2px 2px rgb(51, 51, 51);
             outline: none;
-
         }
+
+
+.playAgainButton {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: 'Press Start 2P', cursive;
+    font-size: 15px;
+    opacity: .8;
+    border: 3px solid black;
+    border-radius: 2px;
+    width: 200px;
+    height: 30px;
+    cursor: pointer;
+    background-color: white;
+    box-shadow: inset -2px -2px rgb(51, 51, 51);
+    z-index: 2;
+    animation: fadeIn 5s;
+}
+    @keyframes fadeIn {
+        0% {opacity: 0;}
+        100% {opacity: .8;}
+    }
+
+    .playAgainButton:hover {
+        background-color: lightslategrey;
+    }
+    .playAgainButton:focus {
+        background-color: rgb(97, 105, 114);
+        box-shadow: inset 2px 2px rgb(51, 51, 51);
+        outline: none;
+    }
+
+.gameOverAnimation {
+    position: absolute;
+    top: 90px;
+    height: 210px;
+    width: 380px;
+    background-color: #8eb8bd;
+    z-index: 1;
+    animation: fadeIn 5s;
+    opacity: .7;
+}
+    @keyframes fadeIn {
+        0% {opacity: 0;}
+        100% {opacity: .7;}
+    }
+
