--- a/views/index.pug
+++ b/views/index.pug
@@ -19,6 +19,10 @@ html
         if bootAnimation === true && !errorMessage  
           img(src= "https://imgur.com/eXThgFx.gif" class= "bootAnimation" id= "bootAnimationId")
           br
+        if gameOver === true
+          div(class= "gameOverAnimation")
+          form(action= link, method= "POST")
+            input(type= "submit", name= "playerChoice" value= option1 class= 'playAgainButton')
         div(class= "screenActual")
           h1
             img(src="https://imgur.com/2Uz0h7U.png" class= "bannerImage")
