--- a/views/gameboy.css
+++ b/views/gameboy.css
@@ -243,7 +243,7 @@ body {
 
 .playAgainButton {
     position: absolute;
-    top: 70%;
+    top: 80%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: 'Press Start 2P', cursive;
@@ -257,12 +257,13 @@ body {
     background-color: white;
     box-shadow: inset -2px -2px rgb(51, 51, 51);
     z-index: 2;
-    animation: fadeIn 10s;
+}
+    /* animation: fadeIn 10s;
 }
     @keyframes fadeIn {
         0% {opacity: 0;}
         100% {opacity: .8;}
-    }
+    } */
 
     .playAgainButton:hover {
         background-color: lightslategrey;
@@ -273,7 +274,7 @@ body {
         outline: none;
     }
 
-.gameOverAnimation {
+/* .gameOverAnimation {
     position: absolute;
     top: 90px;
     height: 210px;
@@ -286,5 +287,5 @@ body {
     @keyframes fadeIn {
         0% {opacity: 0;}
         100% {opacity: .7;}
-    }
+    } */
 
